[gd_scene load_steps=6 format=2]

[ext_resource path="res://title_screen/new_game_menu.gd" type="Script" id=1]
[ext_resource path="res://fonts/NotoSansUI_Regular.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]

size = 40
outline_size = 0
outline_color = Color( 1, 1, 1, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=2]

size = 30
outline_size = 0
outline_color = Color( 1, 1, 1, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=3]

size = 48
outline_size = 0
outline_color = Color( 1, 1, 1, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="new_game_menu" type="Control"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )

[node name="buttons" type="VBoxContainer" parent="."]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="NewCharacter" type="Button" parent="buttons"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1024.0
margin_bottom = 61.0
rect_min_size = Vector2( 0, 40 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "New character"
flat = false
align = 1
_sections_unfolded = [ "Rect", "custom_fonts", "custom_fonts/font" ]

[node name="Label" type="Label" parent="buttons"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 65.0
margin_right = 1024.0
margin_bottom = 107.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 2 )
text = "Characters:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts", "custom_fonts/font" ]

[node name="character_list" type="ScrollContainer" parent="buttons"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 111.0
margin_right = 1024.0
margin_bottom = 523.0
rect_min_size = Vector2( 600, 300 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 7
size_flags_vertical = 7
scroll_horizontal_enabled = false
scroll_horizontal = 0
scroll_vertical_enabled = true
scroll_vertical = 0
scroll_deadzone = 0
_sections_unfolded = [ "Rect", "Scroll", "Size Flags" ]

[node name="scroll" type="VBoxContainer" parent="buttons/character_list"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="StartGame" type="Button" parent="buttons"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 527.0
margin_right = 1024.0
margin_bottom = 600.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Start game"
flat = false
align = 1
_sections_unfolded = [ "custom_fonts", "custom_fonts/font" ]

